@@ -56,8 +56,8 @@ public class WebTest {
 
     public void doForward() throws Exception {
 
-        URL url = new URL("http://" + host  + ":" + port
-                          + contextRoot + "/From?mode=forward");
+        URL url = URI.create("http://" + host  + ":" + port
+                          + contextRoot + "/From?mode=forward").toURL();
         System.out.println("Connecting to: " + url.toString());
 
         HttpURLConnection conn = (HttpURLConnection) url.openConnection();
@@ -71,8 +71,8 @@ public class WebTest {
 
     public void doInclude() throws Exception {
 
-        URL url = new URL("http://" + host  + ":" + port
-                          + contextRoot + "/From?mode=include");
+        URL url = URI.create("http://" + host  + ":" + port
+                          + contextRoot + "/From?mode=include").toURL();
         System.out.println("Connecting to: " + url.toString());
 
         HttpURLConnection conn = (HttpURLConnection) url.openConnection();
@@ -86,8 +86,8 @@ public class WebTest {
 
     public void doError() throws Exception {
 
-        URL url = new URL("http://" + host  + ":" + port
-                          + contextRoot + "/From?mode=error");
+        URL url = URI.create("http://" + host  + ":" + port
+                          + contextRoot + "/From?mode=error").toURL();
         System.out.println("Connecting to: " + url.toString());
 
         HttpURLConnection conn = (HttpURLConnection) url.openConnection();
